# eletronica

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Procfile  README.md  development-settings.example  manage.py  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt
.github/workflows/: django.yml
app/: manage.py
app/core/: admin.py  context_processors.py  forms.py  managers.py  models.py  pagination.py  paginator.py  tasks.py  urls.py  views.py
app/core/api/: serializers.py  urls.py  views.py
app/core/migrations/: 0002_alter_conserto_options_alter_conserto_defeito_and_more.py  0003_conserto_diagnostico.py  0004_conserto_slug.py  0005_alter_conserto_slug.py
app/core/templates/: 404.html  500.html  base.html
app/core/tests/: test_conserto_viewset.py  test_forms_sugestao_solucao.py  test_managers.py  test_models_conserto.py  test_models_defeito.py  test_models_marca.py  test_pagination.py  test_seo_context_processor.py  test_tasks.py  test_views.py  test_views_conserto_detail.py  test_views_robots.py  test_views_search_solution.py  test_views_sugestao_solucao.py
app/eletronica/: asgi.py  urls.py  wsgi.py
app/eletronica/settings/: base.py  test.py
eletronica/: urls.py  wsgi.py
eletronica/core/: admin.py  apps.py  models.py  paginator.py  urls.py  views.py
eletronica/core/migrations/: 0001_initial.py
eletronica/core/templates/: base.html
eletronica/core/tests/: __init__.py  test_models_conserto.py  test_models_defeito.py  test_models_marca.py  (+3 more)
eletronica/settings/: development.py  production.py
(+14 files in other folders)
